@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/m17n-lib
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/m17n-lib/ChangeLog,v 1.43 2009/01/05 11:28:00 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/m17n-lib/ChangeLog,v 1.44 2009/04/05 18:51:41 armin76 Exp $
+
+  05 Apr 2009; Raúl Porcel <armin76@gentoo.org> m17n-lib-1.5.3.ebuild:
+  Add ~sh
 
   05 Jan 2009; Raúl Porcel <armin76@gentoo.org> m17n-lib-1.5.3.ebuild:
   Add ~arm
