@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/fribidi
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/fribidi/ChangeLog,v 1.33 2009/01/01 03:36:41 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/fribidi/ChangeLog,v 1.34 2009/04/05 18:53:56 armin76 Exp $
+
+  05 Apr 2009; Raúl Porcel <armin76@gentoo.org> fribidi-0.10.4.ebuild,
+  fribidi-0.10.7.ebuild, fribidi-0.10.9.ebuild, fribidi-0.19.1.ebuild:
+  Add ~sh
 
 *fribidi-0.19.1 (01 Jan 2009)
 
